[tool.poetry]
name = "cipher_rc3373"
version = "0.1.0"
description = "cipher package created by Renyuan Chen"
authors = ["Renyuan Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
