[tool.poetry]
name = "cipher_rc3373"
version = "0.1.0"
description = "cipher package created by Renyuan Chen"
authors = ["Renyuan Chen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.3.0"
sphinx-rtd-theme = "^1.0.0"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
